--- a/src/Style/Form.css
+++ b/src/Style/Form.css
@@ -1,22 +1,36 @@
 form{
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     margin: 200px;
+    padding: 40px;
+    border-radius: 20px;
+    background: rgb(178, 179, 165);
 }
 .row{
     display: flex;
     justify-content: space-evenly;
 }
+input{
+    border-radius: 15px;
+}
 .champs{
-    width: 40%;
+    width: 100%;
     display: flex;
     margin-left: 20px;
     margin-right: 20px;
+    margin-bottom: 20px;
     flex-direction: column;
 }
-.sendForm{
-    width: 150px;
+.champs input{
+    width: 100%;
+    height: 20px;
+    align-self: center;
+    text-align: center;
+}
+.submitButt{
+    height: 50px;
 }
