Ajout de discution

--- a/src/Style/Banner.css
+++ b/src/Style/Banner.css
@@ -1,7 +1,7 @@
 .banner{
     display: flex;
     justify-content: space-between;
-    background-color: #7c7c7c;
+    background-color: #FFD7D7;
     padding-left: 50px;
     padding-right: 50px;
     align-items: center;
