--- a/src/Style/PostMessage.css
+++ b/src/Style/PostMessage.css
@@ -16,15 +16,13 @@
 .message h3{
     text-align: center;
 }
-.descPara{
 
-}
 form{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-textarea{
+.messageInput{
     border-radius: 15px;
     width: 40%;
     height: 30px;
