--- a/src/Style/Message.css
+++ b/src/Style/Message.css
@@ -6,16 +6,22 @@
     margin-left: 50px;
 }
 .msgItem{
+    margin: 0px;
+    padding: 5px;
+}
+.coreMsgItem{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     flex: 1;
-    margin: 0px;
-    padding: 15px;
+    padding: 5px;
 }
-.msgItem p{
+.coreMsgItem p{
+    display: table-cell;
     margin: 0px;
     flex: 1;
+    max-width: 80%;
+    overflow-wrap: break-word;
 }
 .moreOption{
     opacity: 0;
@@ -30,4 +36,25 @@
 }
 .iconItem{    
     font-size: 20px;
+}
+.replyItem{
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items:center;
+    margin-left: 20px;
+    margin-top: 0px;
+    border: solid 1px black;
+    padding-left: 10px;
+    border-radius: 10px;
+}
+.replyUser{
+    font-size: 15px;
+    font-weight: bold;
+}
+.replyMsg{
+    font-size: 13px;
+    margin : 0px;
+    padding-left : 10px;
+
 }
