Modification des requete fetch pour etre influancer par les erreurs | modification du probleme de text trop long

--- a/src/Style/Message.css
+++ b/src/Style/Message.css
@@ -20,7 +20,8 @@
     display: table-cell;
     margin: 0px;
     flex: 1;
-    max-width: 80%;
+    width: 70px;
+    max-width: 70%;
     overflow-wrap: break-word;
 }
 .moreOption{
