--- a/src/Style/Message.css
+++ b/src/Style/Message.css
@@ -16,10 +16,16 @@
     flex: 1;
     padding: 5px;
 }
-.coreMsgItem p{
-    display: table-cell;
+.coreMsgText{
+    display: flex;
+    width: 100%;
+    align-items: center;
     margin: 0px;
+}
+.msgTextMessage{
+    display: table-cell;
     flex: 1;
+    margin: 0px;
     width: 70px;
     max-width: 70%;
     overflow-wrap: break-word;
@@ -57,5 +63,6 @@
     font-size: 13px;
     margin : 0px;
     padding-left : 10px;
-
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
