--- a/src/Style/Message/PostMessage.css
+++ b/src/Style/Message/PostMessage.css
@@ -27,14 +27,6 @@
     align-items: center;
     background-color: #f3f3f3;
 }
-.messageInput{
-    border-radius: 15px;
-    width: 40%;
-    height: 30px;
-    margin: 10px;
-    padding: 10px;
-    overflow: hidden;
-}
 .replyMsg{
      height:20px
 }
@@ -46,16 +38,34 @@
     font-size:20px;
     margin-left: 20px;
 }
-input{
-    border-radius: 15px;
-}
-.shareOption{
+
+.coreInputMsg{
+    position: relative;
     display: flex;
+    width: 40%;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
 }
-.inputLike:hover{
-    color: red;
+.messageInput{
+    align-self: center;
+    text-align:center;
+    border-radius: 15px;
+    width: 100%;
+    height: 30px;
+    margin: 10px;
+    padding: 10px;
+    overflow: hidden;
 }
-.inputLiked{
-    color: red;
+.coreInputImg{
+    position: absolute;
+    right: -70px;
+    display: flex;
+    flex-direction: column;
+}
+.imageInput{
+    width: 70px;
+}
+.imageRevisual{
+    width: 70px;
 }
