--- a/src/Style/listMsg.css
+++ b/src/Style/listMsg.css
@@ -20,8 +20,13 @@ h2{
     flex-direction: column-reverse;
     margin-bottom: 140px;
     height: 580px;
-    overflow-x: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     border-radius: 15px;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    left: 70px;
 }
 .listMsg{
     padding-top:500px;
