--- a/src/Style/listMsg.css
+++ b/src/Style/listMsg.css
@@ -8,6 +8,7 @@
 .infoMessage{
     display: flex;
     flex-direction: column;
+    background-color: #f3f3f3;
 }
 h2{
     align-self: center;
@@ -19,14 +20,15 @@ h2{
     display: flex;
     flex-direction: column-reverse;
     margin-bottom: 140px;
-    height: 580px;
     overflow-y: scroll;
     overflow-x: hidden;
     border-radius: 15px;
     position: absolute;
+    top: 0px;
     bottom: 0px;
     right: 0px;
     left: 70px;
+    z-index: -1;
 }
 .listMsg{
     padding-top:500px;
