--- a/src/Style/listMsg.css
+++ b/src/Style/listMsg.css
@@ -7,11 +7,16 @@
 }
 .infoMessage{
     display: flex;
-    flex-direction: column;
-    background-color: #f3f3f3;
+    flex-direction: row;
 }
-h2{
+.infoMessage h2{
     align-self: center;
+    z-index: 2;
+    margin: 0px;
+    padding: 20px;
+    width: 100%;
+    background-color: #f3f3f3;
+    text-align: center;
     font-size: 35px;
     margin-bottom: 50px;
 }
@@ -28,7 +33,7 @@ h2{
     bottom: 0px;
     right: 0px;
     left: 70px;
-    z-index: -1;
+    z-index: 1;
 }
 .listMsg{
     padding-top:500px;
