--- a/src/Style/Post/Message/Message.css
+++ b/src/Style/Post/Message/Message.css
@@ -2,3 +2,9 @@
 padding-right: 260px;
 padding-left: 260px;
 }
+.sendMessage{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 50px;
+}
