--- a/src/Style/Post/Message/Message.css
+++ b/src/Style/Post/Message/Message.css
@@ -1,10 +1,15 @@
-.AllMsg{
-padding-right: 260px;
-padding-left: 260px;
+.AllMsg {
+    height: 810px;
+  padding-right: 260px;
+  padding-left: 260px;
+  padding-top: 25px;
+  padding-bottom: 25px;;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
-.sendMessage{
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    font-size: 50px;
+.sendMessage {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  font-size: 50px;
 }
