--- a/src/Style/Post/Page/Index.css
+++ b/src/Style/Post/Page/Index.css
@@ -22,12 +22,31 @@
     text-align: center;
 }
 .textPost{
+    
+    text-align: center;
     font-size: 16px;
     flex : 1;
 }
-.listComment{
-    flex: 1;
+.borderComment{
     border : 1px solid black;
     border-radius: 15px;
-    padding: 5px;
+    margin: 5px;
+    flex: 1;
+    overflow: hidden;
+}
+.listComment{
+    width: 100%;
+    flex: 1;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+::-webkit-scrollbar{
+    background-color: rgb(90, 90, 90);
+    border-radius: 15px;
+    width: 10px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #ca9393;
+    border-radius: 15px;
 }
