--- a/src/Style/Post/Send/Post.css
+++ b/src/Style/Post/Send/Post.css
@@ -35,3 +35,9 @@ textarea{
 .sendPost {
     margin-top: 10px;
 }
+@media only screen and (max-width: 768px) {
+    textarea{
+        height: 100px;
+        width: 90%;
+    }
+}
