--- a/src/Style/Index.css
+++ b/src/Style/Index.css
@@ -9,3 +9,12 @@ body{
     
 }
 
+::-webkit-scrollbar{
+    background-color: rgb(90, 90, 90);
+    border-radius: 15px;
+    width: 10px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #ca9393;
+    border-radius: 15px;
+}
