--- a/src/Style/Post/Message/Message.css
+++ b/src/Style/Post/Message/Message.css
@@ -1,8 +1,9 @@
 .AllMsg {
-  padding-right: 260px;
-  padding-left: 260px;
   padding-top: 25px;
-  padding-bottom: 25px;;
+  padding-bottom: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   overflow-y: scroll;
   overflow-x: hidden;
 }
