--- a/src/Style/Post/Page/Index.css
+++ b/src/Style/Post/Page/Index.css
@@ -1,5 +1,3 @@
-.pagePostMain{
-}
 .pagePostInfoName{
     display: flex;
     justify-content: space-between;
@@ -22,10 +20,12 @@
     text-align: center;
 }
 .textPost{
-    
     text-align: center;
     font-size: 16px;
     flex : 1;
+    padding-top: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 .borderComment{
     border : 1px solid black;
@@ -41,12 +41,34 @@
     overflow-x: hidden;
 }
 
-::-webkit-scrollbar{
-    background-color: rgb(90, 90, 90);
-    border-radius: 15px;
-    width: 10px;
-}
-::-webkit-scrollbar-thumb{
-    background-color: #ca9393;
-    border-radius: 15px;
+@media only screen and (max-width: 768px) {
+
+    .pagePostInfoName{
+        flex-direction: column;
+    }
+    .pagePosteInfoLikeAndComment{
+        display: flex;
+        justify-content: center;
+    }
+    .pagePosteInfoLikeAndComment p {
+        display: flex;
+        flex-direction: column;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .infoPostDown{
+        flex-direction: column;
+    }
+    .textPost{
+        padding-top: 20px;
+        width: 80%;
+        align-self: center;
+    }
+    .borderComment{
+        width: 90%;
+        align-self: center;
+    }
+    .listComment{
+        overflow-y: visible;
+    }
 }
