--- a/src/Style/Message/Channel/List/Item/Channel.css
+++ b/src/Style/Message/Channel/List/Item/Channel.css
@@ -4,9 +4,9 @@
     height:50px;
     background-color: rgb(184, 151, 151);
     padding:10px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border-radius: 50px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 35px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,4 +26,13 @@
 }
 .itemChannel:hover .settingsChannel{
     opacity : 1;
+}
+@media only screen and (max-width: 768px) {
+
+    .itemChannel{
+        margin-bottom: 0px;
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+
 }
