--- a/src/Style/User/Index.css
+++ b/src/Style/User/Index.css
@@ -12,8 +12,11 @@
 .selectInfoPostUser p{
     margin: 5px;
     margin-top: 0px;
-    text-align: center;
 }
 .listPostUser{
     border: 1px solid black;
+    border-radius: 15px;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 5px;
 }
