--- a/src/Style/Log.css
+++ b/src/Style/Log.css
@@ -1,3 +1,15 @@
 .divLog{
     display: flex;
+    width: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+
+    .divLog{
+        flex-direction: column;
+    }
+    .divLog form{
+        width: 100%;
+    }
+
 }
