--- a/src/Style/Message/Message/List/Index.css
+++ b/src/Style/Message/Message/List/Index.css
@@ -9,3 +9,12 @@
     overflow-y: scroll;
     overflow-x: hidden;
 }
+
+@media only screen and (max-width: 768px) {
+
+    .infoMessage h2{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+}
