--- a/src/Style/User/Index.css
+++ b/src/Style/User/Index.css
@@ -18,5 +18,6 @@
     border-radius: 15px;
     margin-left: 5px;
     margin-right: 5px;
-    padding: 5px;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
