--- a/src/Style/Login/Section/Section.css
+++ b/src/Style/Login/Section/Section.css
@@ -8,6 +8,9 @@
     flex-direction: column;
     justify-content: center;
 }
+.mainForm h3{
+    text-align: center;
+}
 .rowForm{
     display:flex;
     justify-content: space-evenly;
