--- a/src/Style/Login/Section/Section.css
+++ b/src/Style/Login/Section/Section.css
@@ -20,6 +20,10 @@
     align-self: center;
     margin-top: 10px
 }
+.errorInput{
+    text-align: center;
+    color: red;
+}
 
 @media only screen and (max-width: 1024px) {
     .mainForm{
